[package]
name = "lorabuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = { version = "3.0.2", features = ["indexmap"] }
indexmap = "1.9.3"
serde_derive = "1.0.162"
serde = "1.0.162"
liquid = "0.26.1"
regex = "1.8.1"