[package]
name = "lorabuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = { version = "3.0.4", features = ["indexmap"] }
indexmap = "2.1.0"
serde = { version = "1.0.165", features = ["derive"] }
liquid = "0.26.4"
regex = "1.9.6"
parse_int = "0.6.0"
